refactor(quizes): quizes alterados no back e front e totalmente funcionais